TabsHeader: Fix wrong aligned tabs in finished propsoals list. (#3245)

--- a/app/components/shared/TabsHeader/TabsHeader.module.css
+++ b/app/components/shared/TabsHeader/TabsHeader.module.css
@@ -2,16 +2,15 @@
   background-color: var(--background-back-color);
   width: 100%;
 }
+
 .tabsWrapper {
-  padding-top: 20px;
-  width: 883px;
   position: relative;
 }
 
 .tabs {
   position: absolute;
-  right: 43px;
-  top: -40px;
+  right: 0;
+  top: 10px;
   overflow: hidden !important;
 }
 .active {
@@ -29,19 +28,7 @@
   border-color: transparent !important;
 }
 
-@media screen and (max-width: 1179px) {
-  .tabsWrapper {
-    width: 735px;
-  }
-}
 @media screen and (max-width: 768px) {
-  .tabsWrapper {
-    width: 375px;
-  }
-  .tabs {
-    right: -10px;
-    top: -40px;
-  }
   .tabs > li > span {
     color: transparent;
   }
