--- a/app/components/views/GovernancePage/Proposals/ProposalsFilter/ProposalsFilter.module.css
+++ b/app/components/views/GovernancePage/Proposals/ProposalsFilter/ProposalsFilter.module.css
@@ -1,8 +1,7 @@
 .tabs {
-  text-align: right;
   max-width: 738px;
   margin-left: 85px;
-  margin-top: 15px;
+  height: 40px;
 }
 
 .tabs > div > ul {
